<resources>
    <string name="app_name">Day3</string>
    <string name="textView1">First EditText</string>
    <string name="button1">Go to Second</string>
    <string name="textView2">Second EditText</string>
    <string name="button2">Go to First</string>
    <string name="title_activity_login">Sign in</string>
    <string name="button3">Go back button</string>
    <string name="button4">Go back button</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="btntext">Text</string>
    <string name="menuitem1">Share</string>
    <string name="btnCam">Take Photo</string>
    <string name="buttonParcel">Send Parcelable Object</string>
</resources>
